@@ -6,6 +6,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - qsub's -W can now parse attributes with quoted lists, for example: 
       qsub script -W attr="foo,foo1,foo2,foo3" will set foo,foo1,foo2,foo3
       as attr's value.
+  e - qstat -f now includes an extra field "Walltime Remaining" that tells 
+      the remaining walltime in seconds. This field is does not account for
+      weighted walltime.
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
